fixing label and bugs

--- a/angularHTMLayout/coffee/property_lookup.ng.html
+++ b/angularHTMLayout/coffee/property_lookup.ng.html
@@ -11,7 +11,7 @@
     <tbody>
       <tr>
         <th class="verySmallCell"></th>
-        <th class="largeMediumCell noWhiteSpace">{{$root.i18n('lookup_property')}} {{$root.i18n('property')}}</th>
+        <th class="largeMediumCell noWhiteSpace">{{$root.i18n('property_lookup_value')}}</th>
         <th class="largeMediumCell">{{$root.i18n('imageUrl')}}</th>
         <th class="largeMediumCell">{{$root.i18n('Icon')}}</th>
         <th class="tableCheckbox">{{$root.i18n('colorIcon')}}</th>
