--- a/angularHTMLayout/coffee/property_numeric.ng.html
+++ b/angularHTMLayout/coffee/property_numeric.ng.html
@@ -11,9 +11,9 @@
     <tbody>
       <tr>
         <th class="verySmallCell"></th>
-        <th class="largeMediumCell noWhiteSpace">{{$root.i18n('lookup_property')}} {{$root.i18n('property')}}</th>
-        <th class="smallCell">{{$root.i18n('lowValue')}}</th>
-        <th class="smallCell">{{$root.i18n('highValue')}}</th>
+        <th class="largeMediumCell noWhiteSpace">{{$root.i18n('property')}}</th>
+        <th class="smallCell">{{$root.i18n('min')}}</th>
+        <th class="smallCell">{{$root.i18n('max')}}</th>
         <th class="largeMediumCell">{{$root.i18n('imageUrl')}}</th>
         <th class="largeMediumCell">{{$root.i18n('Icon')}}</th>
         <th class="tableCheckbox">{{$root.i18n('colorIcon')}}</th>
