--- a/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
+++ b/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
@@ -18,6 +18,10 @@
     <div class="row-cell row-cell-value"><input type="checkbox" ng-model="config.freezeFirstOption" /></div>
   </div>
   <div class="bootstrap-iso rowFlex">
+    <div class="row-cell row-cell-label">{{$root.i18n('groupableTable')}}  :&nbsp;</div>
+    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="config.groupable" /></div>
+  </div>
+  <div class="bootstrap-iso rowFlex">
     <div class="row-cell row-cell-label">{{$root.i18n('itemPerPages')}} :&nbsp;</div>
     <div class="row-cell row-cell-value"><input type="text" ng-model="config.itemPerPages" /></div>
   </div>
