--- a/angularHTMLayout/coffee/actionOnObjectPage.ng.html
+++ b/angularHTMLayout/coffee/actionOnObjectPage.ng.html
@@ -1,6 +1,6 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-value row-cell-max-width ">
+    <div class="row-cell row-cell-value row-cell-max-width">
       <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/actionOnObjectPage_description.ng.html'"></div>
     </div>
   </div>
@@ -89,7 +89,7 @@
                 ng-options="x.id as x.name for x in objectType.properties[f.scriptname].lookups"
               ></select>
               <select
-                style="height:initial"
+                style="height: initial;"
                 multiple
                 size="{{objectType.properties[f.scriptname].lookups.length}}"
                 ng-model="f.Value"
@@ -112,7 +112,7 @@
       </div>
       <div class="rowFlex bootstrap-iso">
         <div class="row-cell row-cell-label">{{$root.i18n('hideElement_action_type')}} :&nbsp;</div>
-        <div class="row-cell row-cell-value" style="display:inline-flex">
+        <div class="row-cell row-cell-value" style="display: inline-flex;">
           <select ng-options="t as t for t in actionType" ng-model="op.actionType" ng-change="clearOperationnParam(op)"></select>
           <input ng-if="op.actionType === 'highlight'" type="color" ng-model="op.highlightColor" />
         </div>
@@ -125,9 +125,9 @@
           </div>
         </div>
         <div class="row bootstrap-iso">
-          <div ng-if="op.type === 'tabs'" class="row-cell row-cell-value row-cell-max-width ">
+          <div ng-if="op.type === 'tabs'" class="row-cell row-cell-value row-cell-max-width">
             <div class="cell-content-wrapper filter-wrapper propertieslist">
-              <div class="add-filter-button" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
+              <div class="choiceBox" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
                 <a
                   class="btn-add-filter btn page-action"
                   ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []"
@@ -139,9 +139,9 @@
           </div>
         </div>
         <div class="row bootstrap-iso">
-          <div ng-if="op.type === 'views'" class="row-cell row-cell-value row-cell-max-width ">
+          <div ng-if="op.type === 'views'" class="row-cell row-cell-value row-cell-max-width">
             <div class="cell-content-wrapper filter-wrapper propertieslist">
-              <div class="add-filter-button" ng-repeat="v in currentRedirectViews | orderBy:'name'">
+              <div class="choiceBox" ng-repeat="v in currentRedirectViews | orderBy:'name'">
                 <a
                   class="btn-add-filter btn page-action"
                   ng-class="op.views.indexOf(v.cwView) !== -1? ['selected'] : []"
@@ -153,9 +153,9 @@
           </div>
         </div>
         <div class="row bootstrap-iso">
-          <div ng-if="op.type === 'propertygroups'" class="row-cell row-cell-value row-cell-max-width ">
+          <div ng-if="op.type === 'propertygroups'" class="row-cell row-cell-value row-cell-max-width">
             <div class="cell-content-wrapper filter-wrapper propertieslist">
-              <div class="add-filter-button" ng-repeat="p in rootNode.PropertiesGroups | orderBy:'name'">
+              <div class="choiceBox" ng-repeat="p in rootNode.PropertiesGroups | orderBy:'name'">
                 <a
                   class="btn-add-filter btn page-action"
                   ng-class="op.propertygroups.indexOf(p.id) !== -1? ['selected'] : []"
@@ -180,15 +180,15 @@
         </div>
         <div ng-if="op.type === 'jQuerySelector'" class="row bootstrap-iso">
           <div class="row-cell row-cell-label">{{$root.i18n('hideElement_jQuerySelector')}} :</div>
-          <div class="row-cell row-cell-value ">
+          <div class="row-cell row-cell-value">
             <input class="largeCell" type="text" ng-model="op.jQuerySelector" />
           </div>
         </div>
       </div>
       <div ng-if="op.actionType === 'displaymsg'">
-        <div ng-if="currentSchema.Tab.Tabs.length > 0" class="row-cell row-cell-value row-cell-max-width ">
+        <div ng-if="currentSchema.Tab.Tabs.length > 0" class="row-cell row-cell-value row-cell-max-width">
           <div class="cell-content-wrapper filter-wrapper propertieslist bootstrap-iso">
-            <div class="add-filter-button" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
+            <div class="choiceBox" ng-repeat="t in currentSchema.Tab.Tabs | orderBy:'name'">
               <a
                 class="btn-add-filter btn page-action"
                 ng-class="op.tabs.indexOf(t.Id) !== -1? ['selected'] : []"
@@ -208,7 +208,7 @@
         </div>
         <div class="bootstrap-iso rowFlex">
           <div class="row-cell row-cell-label">{{$root.i18n('fontawesome_icon')}} :&nbsp;</div>
-          <div class="row-cell row-cell-value" style="display: flex; overflow: visible">
+          <div class="row-cell row-cell-value" style="display: flex; overflow: visible;">
             <select
               id="{{'action_on_page_' + i}}"
               ng-include
@@ -218,7 +218,7 @@
               class="fa"
               ng-init="bootstrapFilter('action_on_page_' + i)"
               ng-model="op.fontAwesome.icon"
-            />
+            ></select>
             <input type="color" ng-model="op.fontAwesome.color" />
           </div>
         </div>
