fix issue with size of column

--- a/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
+++ b/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
@@ -74,7 +74,7 @@
           </div>
           <div class="bootstrap-iso rowFlex">
             <div class="row-cell row-cell-label">{{$root.i18n('columnSize')}} :&nbsp;</div>
-            <div class="row-cell row-cell-value"><input placeholder="{{column.size}}" ng-model="config.nodes[behaviour.node.NodeID].columns[column.originalOrder].size"/></div>
+            <div class="row-cell row-cell-value"><input type="number" placeholder="{{column.size}}" ng-model="config.nodes[behaviour.node.NodeID].columns[column.originalOrder].size"/></div>
           </div>
           <div class="bootstrap-iso rowFlex">
             <div class="row-cell row-cell-label">{{$root.i18n('order')}} :&nbsp;</div>
