modify undefined value to be displayed correctly

--- a/angularHTMLayout/coffee/property_lookup.ng.html
+++ b/angularHTMLayout/coffee/property_lookup.ng.html
@@ -48,7 +48,7 @@
               class="scaleImg"
               src="{{config[ng.selectedObjectTypeScriptname][p.scriptName][l.id].imageUrl}}"
             />
-            {{l.name}}
+            {{manageUndefined(l.name)}}
           </span>
         </td>
         <td class="cw-edit-property-value bootstrap-iso tableTextInput">
