--- a/angularHTMLayout/coffee/homePage_column.ng.html
+++ b/angularHTMLayout/coffee/homePage_column.ng.html
@@ -4,11 +4,11 @@
   ></a>
 </div>
 <div class="bootstrap-iso rowFlex">
-  <div class="row-cell row-cell-label">{{$root.i18n('label_name')}} :&nbsp;</div>
+  <div class="row-cell row-cell-label">{{$root.i18n('name')}} :&nbsp;</div>
   <div class="row-cell row-cell-value"><input ng-model="col.label" /></div>
 </div>
 <div class="bootstrap-iso rowFlex">
-  <div class="row-cell row-cell-label">{{$root.i18n('label_order')}} :&nbsp;</div>
+  <div class="row-cell row-cell-label">{{$root.i18n('order')}} :&nbsp;</div>
   <div class="row-cell row-cell-value"><input type="number" ng-model="col.order" ng-change="reOrderColumns()" /></div>
 </div>
 <div class="bootstrap-iso rowFlex">
