--- a/angularHTMLayout/coffee/homePage_last_modified_object.ng.html
+++ b/angularHTMLayout/coffee/homePage_last_modified_object.ng.html
@@ -39,10 +39,10 @@
   <div class="row-cell row-cell-label">{{$root.i18n('homepage_custom_objectType_to_select')}} :</div>
   <div class="row-cell row-cell-value row-cell-max-width">
     <div class="cell-content-wrapper filter-wrapper propertieslist">
-      <div class="add-filter-button" ng-repeat="(k,p) in objectTypes | orderBy:'name'">
+      <div class="choiceBox" ng-repeat="(k,p) in objectTypes | orderBy:'name'">
         <a
           ng-if="!p.properties.hasOwnProperty('allowautomaticdeletion')"
-          class="btn-add-filter btn page-action"
+          class="btn-add-filter btn page-action choiceBox"
           ng-class="(display.objectTypeToSelect[p.scriptName] && display.objectTypeToSelect[p.scriptName].enable) ? ['selected'] : []"
           ng-click="toggleHM(display,p.scriptName)"
           >{{p.name}}</a
@@ -88,7 +88,12 @@
       <tr class="filter-row filter-content filter-cell" ng-repeat="f in display.objectTypeToSelect[display.cdsSelected].filters">
         <td class="filter-property-scriptname filter-cell">
           <select ng-model="f.id" ng-change="processFilter(f)">
-            <option ng-selected="'prop_' + x.scriptName === f.id" value="prop_{{x.scriptName}}" ng-repeat="x in objectTypes[display.cdsSelected].properties">{{x.name}} </option>
+            <option
+              ng-selected="'prop_' + x.scriptName === f.id"
+              value="prop_{{x.scriptName}}"
+              ng-repeat="x in objectTypes[display.cdsSelected].properties"
+              >{{x.name}}
+            </option>
           </select>
         </td>
 
@@ -106,7 +111,7 @@
             ng-options="x.id as x.name for x in objectTypes[display.cdsSelected].properties[f.scriptname].lookups"
           ></select>
           <select
-            style="height:initial"
+            style="height: initial;"
             multiple
             size="{{objectTypes[display.cdsSelected].properties[f.scriptname].lookups.length}}"
             ng-model="f.Value"
@@ -115,12 +120,16 @@
           ></select>
         </td>
         <td class="filter-cell">
-          <a class="btn page-action no-text" ng-click="display.objectTypeToSelect[display.cdsSelected].filters.splice($index,1)"><i class="fa fa-times" aria-hidden="true"></i></a>
+          <a class="btn page-action no-text" ng-click="display.objectTypeToSelect[display.cdsSelected].filters.splice($index,1)"
+            ><i class="fa fa-times" aria-hidden="true"></i
+          ></a>
         </td>
       </tr>
       <tr>
         <td class="add-filter-button bootstrap-iso">
-          <a class="btn-add-filter btn page-action" ng-click="addFilter(display.objectTypeToSelect[display.cdsSelected])">{{$root.i18n('label_pt_filter_add_new')}}</a>
+          <a class="btn-add-filter btn page-action" ng-click="addFilter(display.objectTypeToSelect[display.cdsSelected])"
+            >{{$root.i18n('label_pt_filter_add_new')}}</a
+          >
         </td>
       </tr>
     </table>
