--- a/angularHTMLayout/homePage/home.ng.html
+++ b/angularHTMLayout/homePage/home.ng.html
@@ -6,14 +6,34 @@
       ng-style="getStyleForDisplay(display)"
       class="homePage_display"
     >
-      <div ng-if="display.extendable" ng-click="display.extended = !display.extended" class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">
-        <i ng-if="display.extended === true" class="fa fa-angle-up" aria-hidden="true"></i>
-        <i ng-if="display.extended === false" class="fa fa-angle-down" aria-hidden="true"></i>
+      <div
+        ng-if="display.extendable"
+        ng-click="display.extended = !display.extended"
+        class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader"
+        ng-class="{'oldAccordeon':display.oldAccordeonStyle}"
+      >
+        <i
+          ng-if="display.extended === false"
+          class="fa expendIcon"
+          ng-class="{'fa-angle-down':!display.oldAccordeonStyle, 'fa-plus': display.oldAccordeonStyle}"
+          aria-hidden="true"
+        ></i>
+        <i
+          ng-if="display.extended === true"
+          class="fa expendIcon"
+          ng-class="{'fa-angle-up': !display.oldAccordeonStyle, 'fa-minus': display.oldAccordeonStyle}"
+          aria-hidden="true"
+        ></i>
+
         <span class="homePage_display_title">
           {{display.label}}
         </span>
       </div>
-      <div ng-style="getStyleForDisplayContent(display)" class="homePage_display_content">
+      <div
+        ng-style="getStyleForDisplayContent(display)"
+        class="homePage_display_content"
+        ng-class="{'oldAccordeonContent':display.oldAccordeonStyle}"
+      >
         <div class="homePage_evolveView" ng-if='display.type==="evolve_view"' ng-init="getHTMLView(display)" ng-bind-html="display.html"></div>
         <div
           class="homePage_description"
