--- a/angularHTMLayout/coffee/homePage_column.ng.html
+++ b/angularHTMLayout/coffee/homePage_column.ng.html
@@ -42,17 +42,17 @@
     ></a>
   </div>
   <div class="bootstrap-iso rowFlex">
-    <div class="row-cell row-cell-label">{{$root.i18n('label_name')}} :&nbsp;</div>
+    <div class="row-cell row-cell-label">{{$root.i18n('name')}} :&nbsp;</div>
     <div class="row-cell row-cell-value"><input ng-model="display.label" /></div>
   </div>
   <div class="bootstrap-iso row">
-    <div class="row-cell row-cell-label">{{$root.i18n('label_description')}} :</div>
+    <div class="row-cell row-cell-label">{{$root.i18n('description')}} :</div>
   </div>
   <div class="row bootstrap-iso">
     <div class="row-cell row-cell-value row-cell-value-textarea"><textarea ng-model="display.description"></textarea></div>
   </div>
   <div class="bootstrap-iso rowFlex">
-    <div class="row-cell row-cell-label">{{$root.i18n('label_order')}} :&nbsp;</div>
+    <div class="row-cell row-cell-label">{{$root.i18n('order')}} :&nbsp;</div>
     <div class="row-cell row-cell-value"><input type="number" ng-model="display.order" ng-change="reOrderDisplays(col)" /></div>
   </div>
   <div class="bootstrap-iso rowFlex">
