--- a/angularHTMLayout/coffee/diagram.ng.html
+++ b/angularHTMLayout/coffee/diagram.ng.html
@@ -7,13 +7,13 @@
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('deactivateDiagramDrillDown')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <input ng-model="config.deactivateDiagramDrillDown" type="checkbox" />
+      <input ng-model="ng.config.deactivateDiagramDrillDown" type="checkbox" />
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('deactivateGPS')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <input ng-model="config.deactivateGPS" type="checkbox" />
+      <input ng-model="ng.config.deactivateGPS" type="checkbox" />
     </div>
   </div>
   <div class="tabs">
