--- a/angularHTMLayout/coffee/duplicateButton.ng.html
+++ b/angularHTMLayout/coffee/duplicateButton.ng.html
@@ -13,8 +13,8 @@
         <div class="choiceBox" ng-repeat="v in objectpages | orderBy:'name'">
           <a
             class="btn-add-filter btn page-action"
-            ng-class="config.pageWithDuplicateButton.hasOwnProperty(v.cwView) ? ['selected'] : []"
-            ng-click="updateConfig(config.pageWithDuplicateButton,v.cwView)"
+            ng-class="ng.config.pageWithDuplicateButton.hasOwnProperty(v.cwView) ? ['selected'] : []"
+            ng-click="updateConfig(ng.config.pageWithDuplicateButton,v.cwView)"
             >{{v.name}} ({{v.cwView}})</a
           >
         </div>
@@ -25,7 +25,11 @@
     <div class="row-cell row-cell-label">{{$root.i18n('duplicate_button_view_to_configure')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
       <select ng-model="configSelected">
-        <option value="{{v.cwView}}" ng-if="config.pageWithDuplicateButton.hasOwnProperty(v.cwView)" ng-repeat="v in objectpages track by v.cwView">
+        <option
+          value="{{v.cwView}}"
+          ng-if="ng.config.pageWithDuplicateButton.hasOwnProperty(v.cwView)"
+          ng-repeat="v in objectpages track by v.cwView"
+        >
           {{v.name}} ({{v.cwView}})</option
         >
       </select>
@@ -34,9 +38,9 @@
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('duplicate_button_association_with_main_object')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <select ng-model="config[configSelected].associationToTheMainObject.associationTypeScriptName">
+      <select ng-model="ng.config[configSelected].associationToTheMainObject.associationTypeScriptName">
         <option
-          ng-selected="{{a.ScriptName.toLowerCase() == config[configSelected].associationToTheMainObject.associationTypeScriptName}}"
+          ng-selected="{{a.ScriptName.toLowerCase() == ng.config[configSelected].associationToTheMainObject.associationTypeScriptName}}"
           ng-repeat="a in metamodel.objectTypes[views[configSelected].rootObjectType].AssociationTypes | orderBy:'DisplayName'"
           ng-if="a.TargetObjectTypeScriptName.toLowerCase() === views[configSelected].rootObjectType"
           value="{{a.ScriptName.toLowerCase()}}"
@@ -54,8 +58,8 @@
         <div class="choiceBox" ng-repeat="p in metamodel.objectTypes[views[configSelected].rootObjectType].properties | orderBy:'name'">
           <a
             class="btn-add-filter btn page-action"
-            ng-class="config[configSelected].propertyScriptNameToExclude.indexOf(p.scriptName) !== -1? ['selected'] : []"
-            ng-click="toggleArray(config[configSelected].propertyScriptNameToExclude,p.scriptName)"
+            ng-class="ng.config[configSelected].propertyScriptNameToExclude.indexOf(p.scriptName) !== -1? ['selected'] : []"
+            ng-click="toggleArray(ng.config[configSelected].propertyScriptNameToExclude,p.scriptName)"
             >{{p.name}}</a
           >
         </div>
@@ -71,8 +75,8 @@
         <div class="choiceBox" ng-repeat="a in metamodel.objectTypes[views[configSelected].rootObjectType].AssociationTypes | orderBy:'DisplayName'">
           <a
             class="btn-add-filter btn page-action"
-            ng-class="config[configSelected].associationScriptNameToExclude.indexOf(a.ScriptName.toLowerCase()) !== -1? ['selected'] : []"
-            ng-click="toggleArray(config[configSelected].associationScriptNameToExclude,a.ScriptName.toLowerCase())"
+            ng-class="ng.config[configSelected].associationScriptNameToExclude.indexOf(a.ScriptName.toLowerCase()) !== -1? ['selected'] : []"
+            ng-click="toggleArray(ng.config[configSelected].associationScriptNameToExclude,a.ScriptName.toLowerCase())"
             >{{a.DisplayName}}</a
           >
         </div>
