--- a/angularHTMLayout/coffee/property_boolean.ng.html
+++ b/angularHTMLayout/coffee/property_boolean.ng.html
@@ -1,6 +1,6 @@
 <div class="rowFlex bootstrap-iso">
   <div class="row-cell row-cell-label">{{$root.i18n('useIconToDisplayTrueFalse')}} :&nbsp;</div>
   <div class="row-cell row-cell-value">
-    <input ng-model="config.booleanIcon" type="checkbox" />
+    <input ng-model="ng.config.booleanIcon" type="checkbox" />
   </div>
 </div>
