--- a/angularHTMLayout/coffee/homePage.ng.html
+++ b/angularHTMLayout/coffee/homePage.ng.html
@@ -1,24 +1,24 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-value row-cell-max-width ">
+    <div class="row-cell row-cell-value row-cell-max-width">
       <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/homePage_description.ng.html'"></div>
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_custom_remove_my_menu')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <input ng-model="config.removeMyMenu" type="checkbox" />
+      <input ng-model="ng.config.removeMyMenu" type="checkbox" />
     </div>
   </div>
   <div ng-if="false" class="row bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('homepage_custom_background_url_image')}} :</div>
     <div class="row-cell row-cell-value">
-      <input class="largeCell" ng-model="config.backgroundImageUrl" type="text" />
+      <input class="largeCell" ng-model="ng.config.backgroundImageUrl" type="text" />
     </div>
   </div>
   <div class="tabs">
     <div
-      ng-repeat="(i, col) in config.columns | orderBy:'order'"
+      ng-repeat="(i, col) in ng.config.columns | orderBy:'order'"
       ng-class="{active: col.selected == true}"
       class="tab-link tab-{{col.Id}}"
       ng-click="selectColumn(i)"
@@ -32,7 +32,7 @@
       ></a>
     </div>
   </div>
-  <div class="tabContent" ng-if="col.selected" ng-repeat="(icol, col) in config.columns">
+  <div class="tabContent" ng-if="col.selected" ng-repeat="(icol, col) in ng.config.columns">
     <div ng-include src="'../../common/html/coffee/homePage_column.ng.html'"></div>
   </div>
   <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
