--- a/angularHTMLayout/coffee/pageFilter.ng.html
+++ b/angularHTMLayout/coffee/pageFilter.ng.html
@@ -1,19 +1,19 @@
 <div>
   <div ng-if="showDescription" class="rowFlex bootstrap-iso">
-    <div class="row-cell row-cell-value row-cell-max-width ">
+    <div class="row-cell row-cell-value row-cell-max-width">
       <div class="filter-wrapper propertieslist" ng-include src="'../../common/html/coffee/pageFilter_description.ng.html'"></div>
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('searchOnAllWord')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <input ng-model="config.searchOnAllWord" type="checkbox" />
+      <input ng-model="ng.config.searchOnAllWord" type="checkbox" />
     </div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('replaceAccentUpperCase')}} :&nbsp;</div>
     <div class="row-cell row-cell-value">
-      <input ng-model="config.replaceAccentUpperCase" type="checkbox" />
+      <input ng-model="ng.config.replaceAccentUpperCase" type="checkbox" />
     </div>
   </div>
   <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
