--- a/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
+++ b/angularHTMLayout/coffee/tableComplexeEnhanced.ng.html
@@ -7,20 +7,20 @@
 
   <div class="bootstrap-iso rowFlex">
     <div class="row-cell row-cell-label">{{$root.i18n('clearFilterAtStart')}} :&nbsp;</div>
-    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="config.clearFilterAtStart" /></div>
+    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.clearFilterAtStart" /></div>
   </div>
   <div class="bootstrap-iso rowFlex">
     <div class="row-cell row-cell-label">Pop Out :&nbsp;</div>
-    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="config.popOut" /></div>
+    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.popOut" /></div>
   </div>
 
   <div class="bootstrap-iso rowFlex">
     <div class="row-cell row-cell-label">{{$root.i18n('groupableTable')}}  :&nbsp;</div>
-    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="config.groupable" /></div>
+    <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.groupable" /></div>
   </div>
   <div class="bootstrap-iso rowFlex">
     <div class="row-cell row-cell-label">{{$root.i18n('itemPerPages')}} :&nbsp;</div>
-    <div class="row-cell row-cell-value"><input type="text" ng-model="config.itemPerPages" /></div>
+    <div class="row-cell row-cell-value"><input type="text" ng-model="ng.config.itemPerPages" /></div>
   </div>
   <div class="rowFlex bootstrap-iso">
     <div class="row-cell row-cell-label">{{$root.i18n('evolve_view')}} :&nbsp;</div>
@@ -43,15 +43,15 @@
 
     <div class="bootstrap-iso rowFlex">
       <div class="row-cell row-cell-label">{{$root.i18n('donotdisplaytitle')}} :&nbsp;</div>
-      <div class="row-cell row-cell-value"><input type="checkbox" ng-model="config.nodes[behaviour.node.NodeID].title" /></div>
+      <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.nodes[behaviour.node.NodeID].title" /></div>
     </div>
     <div class="bootstrap-iso rowFlex">
       <div class="row-cell row-cell-label">{{$root.i18n('specificPopout')}} :&nbsp;</div>
-      <div class="row-cell row-cell-value"><input ng-model="config.nodes[behaviour.node.NodeID].popOutName" /></div>
+      <div class="row-cell row-cell-value"><input ng-model="ng.config.nodes[behaviour.node.NodeID].popOutName" /></div>
     </div>
     <div class="bootstrap-iso rowFlex">
       <div class="row-cell row-cell-label">{{$root.i18n('tableHeight')}} :&nbsp;</div>
-      <div class="row-cell row-cell-value"><input ng-model="config.nodes[behaviour.node.NodeID].heightPercent" /></div>
+      <div class="row-cell row-cell-value"><input ng-model="ng.config.nodes[behaviour.node.NodeID].heightPercent" /></div>
     </div>
     <div class="tabs">
         <div
@@ -67,11 +67,11 @@
       <div class="tabContent" ng-if="column.selected" ng-repeat="(i, column) in behaviour.columns">
         <div ng-init="initColumnConfig(behaviour)" class="bootstrap-iso rowFlex">
             <div class="row-cell row-cell-label ">{{$root.i18n('name')}} :&nbsp;</div>
-            <div class="row-cell row-cell-value "><input class="largeCell"  placeholder="{{column.name}}" ng-model="config.nodes[behaviour.node.NodeID].columns[column.originalOrder].name"/></div>
+            <div class="row-cell row-cell-value "><input class="largeCell"  placeholder="{{column.name}}" ng-model="ng.config.nodes[behaviour.node.NodeID].columns[column.originalOrder].name"/></div>
           </div>
           <div class="bootstrap-iso rowFlex">
             <div class="row-cell row-cell-label">{{$root.i18n('columnSize')}} :&nbsp;</div>
-            <div class="row-cell row-cell-value"><input type="number" placeholder="{{column.size}}" ng-model="config.nodes[behaviour.node.NodeID].columns[column.originalOrder].size"/></div>
+            <div class="row-cell row-cell-value"><input type="number" placeholder="{{column.size}}" ng-model="ng.config.nodes[behaviour.node.NodeID].columns[column.originalOrder].size"/></div>
           </div>
           <div class="bootstrap-iso rowFlex">
             <div class="row-cell row-cell-label">{{$root.i18n('order')}} :&nbsp;</div>
@@ -79,7 +79,7 @@
           </div>
           <div class="bootstrap-iso rowFlex">
             <div class="row-cell row-cell-label">{{$root.i18n('frozen')}}  :&nbsp;</div>
-            <div class="row-cell row-cell-value"><input type="checkbox" ng-model="config.nodes[behaviour.node.NodeID].columns[column.originalOrder].frozen" /></div>
+            <div class="row-cell row-cell-value"><input type="checkbox" ng-model="ng.config.nodes[behaviour.node.NodeID].columns[column.originalOrder].frozen" /></div>
           </div>
       </div>
     </div>
