--- a/angularHTMLayout/coffee/property.ng.html
+++ b/angularHTMLayout/coffee/property.ng.html
@@ -36,5 +36,15 @@
     </span>
   </div>
   <div ng-if="ext.numeric === true" ng-include src="'../../common/html/coffee/property_numeric.ng.html'"></div>
+
+  <div ng-click="ext.hardcoded = !ext.hardcoded" class="cwPropertiesTableHeader CwPropertiesLayoutTableHeader">
+    <i ng-if="ext.hardcoded === true" class="fa fa-angle-up" aria-hidden="true"></i>
+    <i ng-if="!ext.hardcoded" class="fa fa-angle-down" aria-hidden="true"></i>
+    <span class="homePage_display_title">
+      {{$root.i18n('property_hardcoded')}}
+    </span>
+  </div>
+  <div ng-if="ext.hardcoded === true" ng-include src="'../../common/html/coffee/property_hardcoded.ng.html'"></div>
+
   <div ng-include src="'../../common/html/coffee/configurationJson.ng.html'"></div>
 </div>
