fix issue with init filter

--- a/angularHTMLayout/coffee/property_hardcoded.ng.html
+++ b/angularHTMLayout/coffee/property_hardcoded.ng.html
@@ -37,7 +37,7 @@
               data-live-search="true"
               class="fa"
               id="hardcoded{{$index}}"
-              ng-init="bootstrapFilter(hardcoded + $index)"
+              ng-init="bootstrapFilter('hardcoded' + $index)"
               ng-model="mapping.icon"
             ></select>
           </div>
