--- a/angularHTMLayout/coffee/property_numeric.ng.html
+++ b/angularHTMLayout/coffee/property_numeric.ng.html
@@ -87,7 +87,7 @@
           <a
             class="btn-add-operation btn page-action no-text"
             title="{{$root.i18n('add_step')}}]"
-            ng-click="deleteStep(ng.selectedObjectTypeScriptname,p.scriptName,$index)"
+            ng-click="deleteNumericStep(ng.selectedObjectTypeScriptname,p.scriptName,$index)"
             ><i class="fa fa-close" aria-hidden="true"></i
           ></a>
         </td>
