--- a/angularHTMLayout/homePage/linksInBox.ng.html
+++ b/angularHTMLayout/homePage/linksInBox.ng.html
@@ -4,7 +4,7 @@
       <img src="{{link.imgUrl}}"></img>
     </div>
     <img src="{{link.imgUrl}}"></img>
-    <span class="link" >{{link.Label}}</span>
+    <span ng-if="link.Label && link.Label.length > 0" class="link" >{{link.Label}}</span>
   </div>
 </a>
 
